--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -50,20 +50,8 @@
 			<div class="row center footer_part footer_bottom">
 				<ul>
 					<li>
-						<a href="" data-toggle="modal" data-target="#legalMentions" class="disabled">
+						<a href="{{ asset('doc/Statuts.pdf') }}" target="_blank">
 							Mentions légales
-						</a>
-					</li> 
-					<span class="red"> — </span>
-					<li>
-						<a href="" data-toggle="modal" data-target="#thanksTo" class="disabled">
-							Remerciements
-						</a>
-					</li> 
-					<span class="red"> — </span>
-					<li>
-						<a href="" data-toggle="modal" data-target="#FAQ" class="disabled">
-							FAQ
 						</a>
 					</li> 
 					<span class="red"> — </span>
